# QuickTex

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
data/: formula.txt  frequent_commands.txt  simple_commands.toml  suggestions.toml
data/firamath/: FiraMath-Regular.clm1  FiraMath-Regular.clm2
data/firamono/: FiraMonoOT-Bold.clm1  FiraMonoOT-Bold.clm2  FiraMonoOT-Regular.clm1  FiraMonoOT-Regular.clm2
data/firasans/: FiraSansOT-Bold.clm1  FiraSansOT-Bold.clm2  FiraSansOT-BoldItalic.clm1  FiraSansOT-BoldItalic.clm2  FiraSansOT-Light.clm1  FiraSansOT-Light.clm2  FiraSansOT-LightItalic.clm1  FiraSansOT-LightItalic.clm2  FiraSansOT-Medium.clm1  FiraSansOT-Medium.clm2  FiraSansOT-MediumItalic.clm1  FiraSansOT-MediumItalic.clm2  FiraSansOT-Regular.clm1  FiraSansOT-Regular.clm2  FiraSansOT-RegularItalic.clm1  FiraSansOT-RegularItalic.clm2
documents/test/: setup.cpp  slide0.cpp  slide1.cpp
src/: imgui_scale.cpp  imgui_scale.h  imutil.h  main.cpp  state.h
src/chars/: drawable_char.cpp  drawable_char.h  im_char.cpp  im_char.h  wrapper.cpp  wrapper.h
src/core/: image.h
src/fonts/: fonts.cpp  fonts.h
src/imga/: imga.h
src/latex/: cairo_painter.cpp  cairo_painter.h  editor.cpp  editor.h  history.cpp  history.h  imdrawlist_painter.cpp  imdrawlist_painter.h  imgui_latex.cpp  imgui_latex.h  latex.cpp  latex.h
src/search/: commands.cpp  commands.h  search.cpp  str_manip.cpp  str_manip.h
src/slides/: Presentation.cpp  Presentation.h
src/system/: stdcapture.h  sys_util.h
src/window/: defaults.cpp  defaults.h  main_window.cpp  main_window.h
